version/0.7/_sources/_examples/00-basic/index.rst.txt


.. _sphx_glr__examples_00-basic:

.. _basic-gallery:

Basic examples
==============

These basic examples use the PyEnSight API to produce simple scenes.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This most basic EnSight processing example loads some data from an EnSight installation and gen...">

.. only:: html

  .. image:: /_examples/00-basic/images/thumb/sphx_glr_00-basic_example_thumb.png
    :alt:

  :ref:`sphx_glr__examples_00-basic_00-basic_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic usage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EnSight is a simulation results postprocessing engine with an advanced rendering and display co...">

.. only:: html

  .. image:: /_examples/00-basic/images/thumb/sphx_glr_01-renderables_thumb.png
    :alt:

  :ref:`sphx_glr__examples_00-basic_01-renderables.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Renderables</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Utilze EnSight Calculator to compute the Spatial Mean of a field variable. Display this constan...">

.. only:: html

  .. image:: /_examples/00-basic/images/thumb/sphx_glr_02-calc_thumb.png
    :alt:

  :ref:`sphx_glr__examples_00-basic_02-calc.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calculator usage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Utilize EnSight Particle Trace (aka Streamline/Pathline) to visualize a vector through the doma...">

.. only:: html

  .. image:: /_examples/00-basic/images/thumb/sphx_glr_03-ptrace_thumb.png
    :alt:

  :ref:`sphx_glr__examples_00-basic_03-ptrace.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Particle Trace (Streamline/Pathline) usage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Utilize EnSight Particle Trace for Pathline (transient streamline). Create a Pathline and Anima...">

.. only:: html

  .. image:: /_examples/00-basic/images/thumb/sphx_glr_04-ptrace_pathline_thumb.png
    :alt:

  :ref:`sphx_glr__examples_00-basic_04-ptrace_pathline.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pathline (transient streamline) Creation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Utilze EnSight to investigate two types of surface streamlines: Surface Restricted Traces (usin...">

.. only:: html

  .. image:: /_examples/00-basic/images/thumb/sphx_glr_05-surface_traces_lic_thumb.png
    :alt:

  :ref:`sphx_glr__examples_00-basic_05-surface_traces_lic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Surface Restricted Traces and Line Integral Convolution</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /_examples/00-basic/00-basic_example
   /_examples/00-basic/01-renderables
   /_examples/00-basic/02-calc
   /_examples/00-basic/03-ptrace
   /_examples/00-basic/04-ptrace_pathline
   /_examples/00-basic/05-surface_traces_lic

